<package format="2">
  <name>wheelchair</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for wheelchair</p>
    <p>This package contains configuration data, 3D models and launch files
for wheelchair robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <build_depend>nav_core</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>base_local_planner</build_export_depend>

  <exec_depend>nav_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <test_depend>rosunit</test_depend>
  
  <export>
    <architecture_independent />
    <!-- <nav_core plugin="${prefix}/data/includes/astar_plugin.xml" /> -->
     <nav_core plugin="${prefix}/data/includes/rrt_plugin.xml" />

  </export>

</package>